[tool.poetry]
name = "User Complaint Generation"
version = "0.1.0"
description = ""
authors = ["Hala Al Kuwatly <hala.al.kuwatly@zalando.de>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.18"
streamlit = "^1.15"
openai = "^0.25"

[tool.poetry.dev-dependencies]
black = "^22.10"
pycodestyle = "^2.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
